<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/nav_dashboard" />

        <item
            android:id="@+id/nav_apiaries"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/nav_apiaries" />

        <item
            android:id="@+id/nav_calendar"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/nav_calendar" />

        <item
            android:id="@+id/nav_calculators"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/nav_calculators" />

        <item
            android:id="@+id/nav_analytics"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_analytics" />
    </group>

    <item android:title="Nastavenia">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>
