<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.beekeeper.app.presentation.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard" />

    <fragment
        android:id="@+id/nav_apiaries"
        android:name="com.beekeeper.app.presentation.apiary.ApiaryListFragment"
        android:label="@string/nav_apiaries">
        <action
            android:id="@+id/action_apiaries_to_hives"
            app:destination="@id/hiveListFragment" />
    </fragment>

    <fragment
        android:id="@+id/hiveListFragment"
        android:name="com.beekeeper.app.presentation.hive.HiveListFragment"
        android:label="{apiaryName}">
        <argument
            android:name="apiaryId"
            app:argType="string" />
        <argument
            android:name="apiaryName"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.beekeeper.app.presentation.calendar.CalendarFragment"
        android:label="@string/nav_calendar" />

    <fragment
        android:id="@+id/nav_calculators"
        android:name="com.beekeeper.app.presentation.calculator.CalculatorFragment"
        android:label="@string/nav_calculators" />

    <fragment
        android:id="@+id/nav_analytics"
        android:name="com.beekeeper.app.presentation.analytics.AnalyticsFragment"
        android:label="@string/nav_analytics" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.beekeeper.app.presentation.settings.SettingsFragment"
        android:label="@string/nav_settings" />

</navigation>
